test/TestSuite/Syntax/Errors/no_html_suffix.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

# MARK: error 8 no_html_suffix
htmltaskreport "report.foo" {
}

